--- a/index.html
+++ b/index.html
@@ -147,6 +147,76 @@
           <h2 class="mb-5">Experience</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Fullstack Developer .NET + React</h3>
+              <div class="subheading mb-3">Leo Madeiras</div>
+              <p>
+                Currently, leading a team of developers with the goal of
+                rebuilding a legacy system in MVC .NET Framework moving to .NET
+                6 and React. Additionally, I have been involved in maintaining
+                the expenditure forecast system and calculations for the
+                distribution centers of the stores.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2022 - Present (3 years)</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Fullstack Developer .NET + React</h3>
+              <div class="subheading mb-3">WhiteTents</div>
+              <p>
+                Developing on all layers of the WhiteTents application. Using
+                GitHub Actions for launch automation. Google Cloud and Firebase
+                for hosting. Frontend in Angular 2+, React, React Native,
+                Flutter and and Backend in .NET Core with PostgreSQL. We have
+                projets with graphql and mongoDb as well.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2020 - June 2022 (2 years)</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Fullstack Developer .NET + Angular</h3>
+              <div class="subheading mb-3">Safra Bank</div>
+              <p>
+                While working with Safra's clients, I was tasked with leading a
+                system migration project from AngularJS to Angular 9. I
+                successfully developed a proof-of-concept (POC) for connecting
+                the two technologies using the microfrontends concept. This
+                helped to ensure a smooth transition for the system and improved
+                the overall user experience.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2020 - July 2020 (3 months)</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Fullstack Developer .NET + Angular</h3>
+              <div class="subheading mb-3">Smarkets</div>
+              <p>
+                As a key member of the startup's purchase project team, I have
+                been actively involved in the development of all layers of the
+                application. I have also been responsible for hosting cloud
+                services on Azure and designing efficient solutions for the
+                architecture of the application. My contributions have been
+                instrumental in ensuring the success of the project and meeting
+                the needs of the clients.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Nov 2019 - May 2020 (7 months)</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Backend Developer .NET + SQL + BI</h3>
               <div class="subheading mb-3">Intel Corporation</div>
               <p>
